# user-service-management

./: .docker.env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  app.py  docker-compose.yaml  linux.requirements.txt  pip-audit-result  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 37a049d4d0bc_create_initial_tables.py
common_libs/: __init__.py  logger.py  rabbitmq.py  utils.py
core/: __init__.py  base_views.py  config.py  db.py  events.py  extensions.py  model.py  urls.py
scripts/: run_docs.sh
tests/: conftest.py  utils.py
tests/users/: test_routes.py
users/: __init__.py  model.py  operations.py  rabbit_operation.py  scheme.py  views.py
