[project]
name = "users-management-service"
version = "0.1.0"
description = "users-management-service"
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "aio-pika>=9.5.7",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
